# march_madness

./: .gitignore  README.md  environment.yml
ncaa/: README.md  api_ncaa.py  pyproject.toml
ncaa/develop/2019/prog/: 00Py_NCAA_fill_the_bracket.ipynb  01Py_NCAA_eda_1.ipynb  02R_NCAA_calcolo_AR.R  03Py_NCAA_creazione_indicatori.ipynb  04Py_NCAA_creazione_ranking.ipynb  05Py_NCAA_pav_test.ipynb  08Py_NCAA_training_4_years.ipynb  08Py_NCAA_training_4_years_new.ipynb  09Py_NCAA_training_4_years_ranking.ipynb  10Py_NCAA_submission_new.ipynb  isotonic_regression_v01.py  models_v01.py  prova_logloss.ipynb
ncaa/develop/2019/prog/.ipynb_checkpoints/: 00Py_NCAA_fill_the_bracket-checkpoint.ipynb  03Py_NCAA_creazione_indicatori-checkpoint.ipynb  06Py_NCAA_indicatori_rivisti_and_upset_dummy-checkpoint.ipynb  07Py_NCAA_first_models-checkpoint.ipynb  08Py_NCAA_training_4_years_new-checkpoint.ipynb  10Py_NCAA_submission-checkpoint.ipynb  10Py_NCAA_submission_new-checkpoint.ipynb
ncaa/develop/2019/prog/functions/: ncaa19.py
ncaa/develop/2019/reports/: 01Py_dataset_per_metriche.csv  Lasso_Isotonic_1.xlsx  descrizione_indicatori.xlsx  indicatori_trend.xlsx  test_logloss.xlsx  upset_rules.xlsx
ncaa/ncaa/: api.py  api_endpoint.py  create_feature.py
ncaa/ncaa/src/: error_handler.py  loader.py
ncaa/ncaa/src/config/: general.py  io_class.py
ncaa/tests/: test_api.py  test_loader.py
