[tool.poetry]
name = "ncaa"
version = "0.1.0"
description = ""
authors = ["PozzOver13 <pozz.ste@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
polars = "^0.20.16"
pytest = "^8.1.1"
pyarrow = "^15.0.2"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
