[tool.poetry]
name = "ncaa"
version = "0.2.0"
description = ""
authors = ["PozzOver13 <pozz.ste@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
polars = "^0.20.16"
pytest = "^8.1.1"
pyarrow = "^15.0.2"
pandas = "^2.2.1"
fastapi = {extras = ["all"], version = "^0.110.1"}
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
